# darkplaces-rust-conversion

./: CMakeLists.txt  build-with-wrapper.sh  build.sh  convert_build_commands.py  flake.nix  makefile  makefile.inc  vid_sdl.c
bencode/: __init__.py
